<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/edit_imageview"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_200" />

    <TextView
        android:id="@+id/edit_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/post_edit"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/post_text_textview"
        app:layout_constraintEnd_toStartOf="@id/cancel_imageview"
        app:layout_constraintStart_toEndOf="@id/edit_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/post_edit_title" />

    <TextView
        android:id="@+id/post_text_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_title_textview"
        app:layout_constraintStart_toStartOf="@id/edit_title_textview"
        app:layout_constraintTop_toBottomOf="@id/edit_title_textview"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/post_text" />

    <ImageView
        android:id="@+id/cancel_imageview"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>