<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/logo_name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/post_date_textview"
        app:layout_constraintEnd_toStartOf="@id/more_imageview"
        app:layout_constraintStart_toEndOf="@id/logo_imageview"
        app:layout_constraintTop_toTopOf="@id/logo_imageview"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/avatar_text" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/logo_imageview"
        app:layout_constraintStart_toStartOf="@id/logo_name_textview"
        app:layout_constraintTop_toBottomOf="@id/logo_name_textview"
        tools:text="@string/post_date" />

    <ImageView
        android:id="@+id/more_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:src="@drawable/ic_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/post_text_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_imageview"
        tools:text="@string/post_text" />


    <ImageView
        android:id="@+id/likes_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_favorite_border_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_text_textview"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/count_likes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/likes_imageview"
        app:layout_constraintTop_toTopOf="@id/likes_imageview"
        tools:text="@string/post_count_likes" />

    <ImageView
        android:id="@+id/post_share_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_share_24"
        app:layout_constraintStart_toEndOf="@id/count_likes_textview"
        app:layout_constraintTop_toTopOf="@id/likes_imageview"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/count_shares_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/post_share_imageview"
        app:layout_constraintTop_toTopOf="@id/likes_imageview"
        tools:text="@string/post_count_likes" />


    <ImageView
        android:id="@+id/post_view_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_eye_24"
        app:layout_constraintEnd_toStartOf="@id/count_views_textview"
        app:layout_constraintTop_toTopOf="@id/likes_imageview"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/count_views_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes_imageview"
        tools:text="@string/post_count_likes" />

</androidx.constraintlayout.widget.ConstraintLayout>